--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
 
-  <body></body>
+  <body>
+    <!-- header section -->
+
+    <!-- ranking section -->
+
+    <!-- cards section -->
+  </body>
 </html>
