--- a/index.html
+++ b/index.html
@@ -32,8 +32,92 @@
       </p>
     </header>
 
-    <!-- ranking section -->
+    <div class="rankings">
+      <div class="ranking" id="rk1">
+        <div class="ranking-star">
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+        </div>
+        <p><strong>Rated 5 Stars in Reviews</strong></p>
+      </div>
 
-    <!-- cards section -->
+      <div class="ranking" id="rk2">
+        <div class="ranking-star">
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+        </div>
+        <p><strong>Rated 5 Stars in Report Guru</strong></p>
+      </div>
+
+      <div class="ranking" id="rk3">
+        <div class="ranking-star">
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+          <img src="./images/icon-star.svg" alt="estrella" />
+        </div>
+        <p><strong>Rated 5 Stars in BestTech</strong></p>
+      </div>
+    </div>
+
+    <div class="cards">
+      <div class="card" id="sec1">
+        <div class="perfil" id="colton">
+          <img src="./images/image-colton.jpg" alt="perfil-img" />
+          <div class="perfil-info">
+            <p><strong>Colton Smith</strong></p>
+            <p>Verified Buyer</p>
+          </div>
+        </div>
+        <div class="perfil-hist">
+          <p>
+            "We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent!"
+          </p>
+        </div>
+      </div>
+
+      <div class="card" id="sec2">
+        <div class="perfil" id="irene">
+          <img src="./images/image-irene.jpg" alt="perfil-img" />
+          <div class="perfil-info">
+            <p><strong>Irene Roberts</strong></p>
+            <p>Verified Buyer</p>
+          </div>
+        </div>
+        <div class="perfil-hist">
+          <p>
+            "Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery."
+          </p>
+        </div>
+      </div>
+
+      <div class="card" id="sec3">
+        <div class="perfil" id="anne">
+          <img src="./images/image-anne.jpg" alt="perfil-img" />
+          <div class="perfil-info">
+            <p><strong>Anne Wallace</strong></p>
+            <p>Verified Buyer</p>
+          </div>
+        </div>
+        <div class="perfil-hist">
+          <p>
+            "Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone!"
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
